# Software-Security-Supply-Chain

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
off_chain/: Dockerfile  config.py  database.db  docker-compose.yml  pyproject.toml  requirement.txt  sfsMain.py
off_chain/config/: database.db  database.py  settings.py
off_chain/controllers/: controller_autenticazione.py  controller_azienda.py  controller_certificatore.py  controller_company.py  controller_guest.py  controller_product.py
off_chain/database_domenico/: db_login.py  db_migrations.py  db_operations.py  user_operation.py
off_chain/db_operation/: user_operation.py
off_chain/migration/: migrations.py
off_chain/model/: azienda.py  azione_compensativa.py  base_model.py  certificato.py  composizione.py  credential_model.py  operazione.py  prodotto.py
off_chain/repositories/: auth_repository.py  base_repository.py  cerificate_repository.py  certificate_repository.py  company_repository.py  compensaory_action_repository.py  compensatory_action_repository.py  composition_repository.py  operation_repository.py  product_repository.py  query_builder.py  threshold_repository.py
off_chain/services/: auth_service.py  user_operation.py
off_chain/view/: company_menu.py  funzioni_utili.py  home_page_aziende.py  home_page_certificatore.py  home_page_guest.py  inserisci_azione.py  inserisci_operazione.py  istruzioni.py  start_menu.py  vista_accedi.py  vista_aziende.py  vista_azioni_compensative.py  vista_operazioni.py  vista_prodotti.py  vista_soglie.py  vista_stato_azienda.py  vista_sviluppatori.py
(+1 files in other folders)
