[tool.poetry]
name = "sustainable-food-supply-chain"
version = "0.1.0"
description = "Blockchain project for sustainable food supply chain"
authors = ["Catalina Quispe"]
package-mode = false


[tool.poetry.dependencies]
python = ">=3.13"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
